--- a/style.css
+++ b/style.css
@@ -461,12 +461,12 @@ h2 {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  color: #6d6d6d;;
+  color: #6d6d6d;
   margin: 0px;
 }
 
 .contact__content a {
-  color: #199AC6;
+  color: #6d6d6d;
 }
 
 /* Map */
