--- a/style.css
+++ b/style.css
@@ -458,11 +458,15 @@ h2 {
 }
 
 .contact__content p {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
   color: #6d6d6d;
   margin: 0px;
+}
+
+.contact__content p + p {
+  margin-top: 5px;
 }
 
 .contact__content a {
